# Typhon

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SKILLS.md  pyproject.toml  pyrefly.toml  pyrightconfig.json  result.py  ruff.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
doc/: memo.md
doc/reference/: README.md  architecture.md  future_plans.md  lexical_structure.md  removed_features.md  types.md  variables.md
script/: _util.py  build.py  clean_temp.py  grammar_test.py  lsp_test.py  run.py  run_test.py  test_all.py  upload.py  util.py
script/benchmark/: parse_large_file.py  profile_parse.py
script/test/: __main__.py  _util.py  all.py  execute.py  files.py  grammar.py  install.py  lsp.py  run.py
src/Grammar/: parser_helper.py  syntax_errors.py  tokenizer_custom.py  typhon.gram  typhon_ast.py
src/Transform/: comprehension_to_function.py  const_member_to_final.py  const_member_to_property.py  forbidden_statements.py  func_literal_to_def.py  func_type_to_protocol.py  if_while_let.py  inline_statement_block_capture.py  insert_self_to_method.py  name_generator.py  optional_operators_to_checked.py  record_to_dataclass.py  scope_check_rename.py  transform.py  type_abbrev_desugar.py  type_annotation_check_expand.py  visitor.py
src/Typhon/: __main__.py  main.py
test/: assertion_utils.py  conftest.py
test/Execute/: file_check_util.py  test_run_directory.py  test_run_files.py  test_syntax.py  test_syntax_errors.py  test_type_errors.py
test/Grammar/: assertion_utils.py  exp_abbrev_type.py  (+28 more)
(+320 files in other folders)
