[project]
name = "Typhon-Language"
version = "0.1.1"
description = "Typhon programming language"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "basedpyright>=1.32.1",
    "fire>=0.7.1",
    "intervaltree>=3.1.0",
    "pegen>=0.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]

[project.scripts]
typhon="Typhon.__main__:main"
