[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Typhon-Language"
version = "0.1.4"
description = "Typhon programming language"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "basedpyright>=1.37.1",
    "fire>=0.7.1",
    "intervaltree>=3.2.1",
    "pegen>=0.3.0",
    "pygls>=2.0.0",
    "pyrefly>=0.47.0",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[project.scripts]
typhon="Typhon.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["Typhon*"]
